<resources>
    <string name="app_name">MyApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculate">CalculateActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_plan">AddPlanActivity</string>
    <string name="title_app">Praca dyplomowa</string>
    <string name="author_app">Autor: Anna Zielińska</string>
    <string name="promoter_app">Promotor: prof. dr hab. inż Marek Kurzyński</string>
    <string name="calculate">Oblicz dzienne zapotrzebowanie</string>
    <string name="add_plan">Dodaj schemat</string>
    <string name="search_plan">Znajdź schemat</string>
    <string name="author">Autor</string>
    <string name="gender">Płeć:</string>
    <string name="female">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="weight">Masa ciała (kg): </string>
    <string name="growth">Wzrost (cm): </string>
    <string name="age">Wiek:</string>
    <string name="active">Aktywność fizyczna:</string>
    <string name="calculate_short">Oblicz</string>
    <string name="none">Brak</string>
    <string name="radio1">Lekka aktywność (kilka razy w miesiącu)</string>
    <string name="radio2">Umiarkowana aktywność (1-2 w tygodniu)</string>
    <string name="radio3">Duża aktywność (3-5 w tygodniu)</string>
    <string name="radio4">Bardzo duża aktywność (codzienie, praca fizyczna, itp.)</string>
    <string name="type">Typ sylwetki:</string>
    <string name="ectomorph">ektomorfik</string>
    <string name="endomorph">endomorfik</string>
    <string name="mesomorph">mezomorfik</string>
    <string name="title_activity_result">result</string>
    <string name="choose_schema">Wybierz schemat:</string>
    <string name="your_daily_request">Twoje dzienne zapotrzebowanie wynosi:</string>
    <string name="result">Wynik</string>
    <string name="low_carb">Low carb</string>
    <string name="reduction">reduction</string>
    <string name="title_activity_add_meal">Dodaj posiłek</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="add_product_to_database">Dodaj produkt do bazy</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="search_product">Wyszukaj produkt</string>
    <string name="back">Wróć</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="name">Nazwa:</string>
    <string name="calories">Kaloryczność:</string>
    <string name="carbo">Węglowodany:</string>
    <string name="protein">Białko:</string>
    <string name="fat">Tłuszcz:</string>
    <string name="set_value_for_100_g">Podaj wartości dla 100 g: </string>
</resources>
